# Rapport

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
apps/customers/: api.py  apps.py  models.py  schemas.py  services.py
apps/customers/migrations/: 0001_initial.py  0002_initial.py
apps/customers/tests/: conftest.py
apps/customers/tests/integration/: test_customers.py
apps/products/: api.py  models.py  schemas.py  tasks.py
apps/products/migrations/: 0001_initial.py
apps/schedules/: api.py  apps.py  models.py  schemas.py  services.py
apps/schedules/migrations/: 0001_initial.py  0002_alter_customerschedule_start_time.py  0003_customerschedule_fc.py
apps/schedules/tests/: conftest.py
apps/schedules/tests/integration/: test_schedules.py
apps/users/: api.py  auth_api.py  models.py  schemas.py  services.py
apps/users/migrations/: 0001_initial.py  0002_userrefreshtoken.py
apps/users/tests/: conftest.py
apps/users/tests/integration/: test_auth.py
apps/users/tests/unit/: test_user_services.py
config/: api.py  asgi.py  celery.py  exceptions.py  mixins.py  permissions.py  renderer.py  test_client_request.py  to_camel_case.py  urls.py
config/settings/: base.py  debug.py  deploy.py
infra/mysql/initdb.d/: init.sql
infra/nginx/configs/conf.d/: public.conf  upstream.conf
infra/scripts/: celery_entrypoint.sh
tests/: test_objects.py
