[tool.poetry]
name = "rapport"
version = "0.1.0"
description = "For my mom"
authors = ["earthlyz9<earthlyz9.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.0"
django = "^4.2.3"
django-ninja = "^0.22.2"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"
mysqlclient = "^2.2.0"
django-ninja-jwt = "^5.2.5"
six = "^1.16.0"
pre-commit = "^3.3.3"
pytest = "^7.4.0"
pytest-django = "^4.5.2"
django-extensions = "^3.2.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.debug"
python_files = "test_*.py *_tests.py tests.py test.py"
addopts = "-vv --maxfail=10 --no-migrations"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"